--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,246 +2,6 @@
   --custom-primary: #0464ca;
 }
 
-/* No-ui-slider */
-.noUi-target {
-  border: none;
-  box-shadow: none;
-  border-radius: 0px;
-}
-
-.noUi-target.noUi-horizontal {
-  height: 0.25rem;
-}
-
-.noUi-target.noUi-horizontal .noUi-handle {
-  left: 20px;
-}
-
-.noUi-target.noUi-vertical {
-  width: 0.25rem;
-  height: 156px;
-  display: inline-block;
-}
-
-.noUi-target.noUi-vertical .noUi-handle {
-  left: -6px;
-}
-
-.noUi-target .noUi-base {
-  background: #e6e9ed;
-  box-shadow: none;
-  border: none;
-}
-
-.noUi-target .noUi-base .noUi-connect {
-  background: var(--custom-primary);
-  box-shadow: none;
-}
-
-.noUi-target .noUi-base .noUi-origin {
-  background: #71c016;
-}
-
-.noUi-target .noUi-base .noUi-origin .noUi-handle {
-  position: relative;
-  background: #ffffff;
-  border-radius: 100%;
-  border: 1px solid #e9e8ef;
-  width: 18px;
-  height: 18px;
-  top: -7px;
-  outline: none;
-  -webkit-transition-duration: 0.4s;
-  -moz-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
-
-.noUi-target .noUi-base .noUi-origin .noUi-handle:after, .noUi-target .noUi-base .noUi-origin .noUi-handle:before {
-  display: none;
-}
-
-.noUi-target .noUi-base .noUi-origin .noUi-handle:after {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 6px;
-  height: 6px;
-  background: var(--custom-primary);
-  border-radius: 100%;
-}
-
-.noUi-target .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  font-weight: 600;
-  border-radius: 4px;
-  border: none;
-  line-height: 1;
-  font-size: 0.875rem;
-  padding: 13px 12px;
-  bottom: 190%;
-}
-
-.noUi-target .noUi-pips .noUi-marker-horizontal, .noUi-target .noUi-pips .noUi-marker-vertical {
-  background: #e9e8ef;
-}
-
-.noUi-target .noUi-pips .noUi-marker-horizontal {
-  height: 9px;
-  width: 1px;
-}
-
-.noUi-target .noUi-pips .noUi-marker-vertical {
-  height: 1px;
-  width: 9px;
-}
-
-.noUi-target .noUi-pips .noUi-value {
-  color: #000;
-  font-size: 0.94rem;
-  font-weight: 600;
-}
-
-/* Slider Color variations */
-
-.slider-primary .noUi-base .noUi-connect {
-  background: var(--custom-primary);
-}
-
-.slider-primary .noUi-base .noUi-origin {
-  background: var(--custom-primary);
-}
-
-.slider-primary .noUi-base .noUi-origin .noUi-handle:after {
-  background: var(--custom-primary);
-}
-
-.slider-primary .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: var(--custom-primary);
-  color: #ffffff;
-}
-
-.slider-secondary .noUi-base .noUi-connect {
-  background: #dfe3e9;
-}
-
-.slider-secondary .noUi-base .noUi-origin {
-  background: #dfe3e9;
-}
-
-.slider-secondary .noUi-base .noUi-origin .noUi-handle:after {
-  background: #dfe3e9;
-}
-
-.slider-secondary .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #dfe3e9;
-  color: #ffffff;
-}
-
-.slider-success .noUi-base .noUi-connect {
-  background: #71c016;
-}
-
-.slider-success .noUi-base .noUi-origin {
-  background: #71c016;
-}
-
-.slider-success .noUi-base .noUi-origin .noUi-handle:after {
-  background: #71c016;
-}
-
-.slider-success .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #71c016;
-  color: #ffffff;
-}
-
-.slider-info .noUi-base .noUi-connect {
-  background: #b3b4e8;
-}
-
-.slider-info .noUi-base .noUi-origin {
-  background: #b3b4e8;
-}
-
-.slider-info .noUi-base .noUi-origin .noUi-handle:after {
-  background: #b3b4e8;
-}
-
-.slider-info .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #b3b4e8;
-  color: #ffffff;
-}
-
-.slider-warning .noUi-base .noUi-connect {
-  background: #ffc100;
-}
-
-.slider-warning .noUi-base .noUi-origin {
-  background: #ffc100;
-}
-
-.slider-warning .noUi-base .noUi-origin .noUi-handle:after {
-  background: #ffc100;
-}
-
-.slider-warning .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #ffc100;
-  color: #ffffff;
-}
-
-.slider-danger .noUi-base .noUi-connect {
-  background: #fc5661;
-}
-
-.slider-danger .noUi-base .noUi-origin {
-  background: #fc5661;
-}
-
-.slider-danger .noUi-base .noUi-origin .noUi-handle:after {
-  background: #fc5661;
-}
-
-.slider-danger .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #fc5661;
-  color: #ffffff;
-}
-
-.slider-light .noUi-base .noUi-connect {
-  background: #f8f9fa;
-}
-
-.slider-light .noUi-base .noUi-origin {
-  background: #f8f9fa;
-}
-
-.slider-light .noUi-base .noUi-origin .noUi-handle:after {
-  background: #f8f9fa;
-}
-
-.slider-light .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #f8f9fa;
-  color: #ffffff;
-}
-
-.slider-dark .noUi-base .noUi-connect {
-  background: #000000;
-}
-
-.slider-dark .noUi-base .noUi-origin {
-  background: #000000;
-}
-
-.slider-dark .noUi-base .noUi-origin .noUi-handle:after {
-  background: #000000;
-}
-
-.slider-dark .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-  background: #000000;
-  color: #ffffff;
-}
-
 /* General styles */
  
 .btn-primary {
@@ -264,4 +24,22 @@
 
 .form-control{
   border-radius: 0!important;
+}
+
+.auth .login-half-bg {
+  background: url("/auth/login-bg.jpg");
+  background-image: -webkit-image-set(url('/auth/login-bg.webp')1x);
+  background-size: cover;
+}
+
+.auth .auth-form-light {
+  background: #ffffff;
+}
+
+.auth.auth-img-bg {
+  padding: 0;
+}
+
+.info-container{
+  padding-top: 3.5rem!important
 }
